--- a/chapter_statistics.tex
+++ b/chapter_statistics.tex
@@ -1,3 +1,5 @@
+%!TEX root=main.tex
+
 \chapter{What is statistics?}
 
 ``Statistics'' is confusing because it means two things. It's a plural noun that
